# GSGFs-blog-backend

./: .dockerignore  .editorconfig  .env.example  .gitignore  .oxfmtrc.jsonc  .prettierignore  AGENTS.md  Dockerfile  README.md  backup-db.sh  build_files.sh  compose.yml  docker-compose.yml  dockerfile  export.sh  gunicorn.conf.py  package.json  pnpm-lock.yaml  pyproject.toml  requirement.txt  requirements.txt  sonar-project.properties  supervisord.conf  tailwind.config.js  tsconfig.json  upload.py  vercel.json  vite.config.ts
.config/: README.md
.config/k8s/: README.md  celery-beat.yaml  celery-worker.yaml  cluster-issuer.yaml  configmap.yaml  django.yaml  ingress-dev.yaml  ingress.yaml  job-backup.yaml  job-migrate.yaml  namespace.yaml  postgres.yaml  pvc.yaml  redis.yaml  secret.example.yaml
.config/litellm/: config.yaml
.config/prometheus/: README.md  prometheus.yml
.config/quadlet/: README.md  blog-db.container  blog-postgres.container  blog-redis.container  django.container
.github/workflows/: ci-cd.yml  codeql-analysis.yml  docker-image.yml  mirror.yml
.woodpecker/: build.yaml  ci.yaml  gitops.yaml  scan.yaml  test.yaml
api/: admin.py  anilist.py  apps.py  auth.py  constants.py  endpoints.py  exiftool.py  image.py  jikan.py  markdown.py  ml_model.py  models.py  nvdb.py  pagination.py  post_search.py  rate_limit.py  schemas.py  signals.py  tasks.py  text_chunking.py  urls.py  utils.py  vndb.py
api/backends/: ResendEmailBackend.py  __init__.py
api/markdown/: __init__.py  deprecated.py  markdown_it.py
api/migrations/: 0001_initial.py  0002_alter_post_category.py  0003_alter_post_category.py  0004_alter_post_author_alter_post_category_and_more.py  0005_alter_post_author_alter_post_tags.py  0006_alter_post_options_post_meta_description_post_order_and_more.py  0007_post_cover_image_post_header_image_alter_post_slug.py  0008_alter_post_created_at_alter_post_update_at.py  0009_post_content_html.py  0010_alter_post_content_html.py  0011_alter_author_name_remove_post_author_and_more.py  0012_guest.py  0013_guest_provider.py  0014_guest_unique_id_alter_guest_email_alter_guest_name_and_more.py  0015_comment.py  0016_rename_author_comment_guest_alter_guest_unique_id.py  0017_remove_author_deleted_at_remove_author_is_deleted_and_more.py  0018_alter_post_update_at.py  0019_alter_comment_update_at.py  0020_guest_provider_id.py  0021_guest_avatar_guest_last_visit.py  0022_comment_browser_comment_device_comment_os_and_more.py  0023_remove_comment_device_comment_browser_version_and_more.py  0024_rename_os_comment_os.py  0025_page.py  0026_gal.py  0027_alter_gal_character_score_alter_gal_review_and_more.py  0028_remove_gal_name_gal_comprehensive_score_gal_title_and_more.py  0029_alter_gal_vndb_id.py  0030_alter_gal_title.py  0031_guest_created_at_guest_update_at.py  0032_page_keywords_post_keywords.py  0033_author_created_at_author_update_at_and_more.py  0034_remove_post_author_remove_page_author_and_more.py  0035_anime.py  0036_anime_mal_id_alter_gal_vndb_id.py  0037_alter_anime_name.py  0038_remove_anime_alias_anime_score_anime_synopsis_and_more.py  0039_alter_category_name_alter_comment_guest_and_more.py  0040_gal_review_html.py  (+10 more)
api/models/: __init__.py  anime.py  base.py  category.py  comment.py  gal.py  guest.py  image.py  page.py  post.py  tag.py
api/routers/: anime.py  auth.py  category.py  comment.py  comments.py  front.py  gal.py  guest.py  health.py  heath.py  image.py  mail.py  page.py  pages.py  post.py  posts.py  root.py  test.py
api/schemas/: __init__.py  anime.py  auth.py  base.py  category.py  comment.py  gal.py  image.py  post.py  sitemap.py  system.py  tag.py
api/test/: posts.py
api/tests/: runner.py  test_auth.py  test_comment.py  test_exiftool.py  test_guest.py  test_image.py  test_image_upload.py  test_ml_model.py  test_performance.py  test_post.py  test_posts.py  test_rate_limit.py  test_root.py  test_text_chunking.py  test_utils.py
blog/: celery.py  settings.py  urls.py  wsgi.py
core/: hash.py  inspect.py
media_service/: admin.py  apps.py  constants.py  signals.py  tasks.py
media_service/migrations/: 0001_initial.py  0002_imageresource_placeholder.py
media_service/models/: __init__.py  image.py  music.py
media_service/services/: image.py
media_service/tests/: test_admin.py  test_exiftool.py  test_signals.py  test_tasks.py
scripts/: argo-app-config.sh  argo-app-config.template.yaml  backup-db.sh  build-and-push.sh  build_island_placeholders.mjs  docker-build.sh  docker-export.sh  docker-freeze.py  download-model.py  generate_env.py  k3s-build.sh  k3s-deploy.sh  k3s-sync-secrets.sh  podman-build.sh  podman-export.sh  regenerate_embeddings.py  restore-db.sh  storage.conf  test.sh  upload.py  wait_for_db.py
web/: context_processors.py  urls.py  views.py
(+71 files in other folders)
