[project]
name = "GSGFs-blog-backend"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.63",
    "boto3-stubs[s3]>=1.40.63",
    "celery-types>=0.23.0",
    "dj-database-url>=3.0.1",
    "django>=5.2.9",
    "django-celery-beat>=2.8.1",
    "django-debug-toolbar>=6.1.0",
    "django-ninja>=1.4.5",
    "django-redis>=6.0.0",
    "django-two-factor-auth>=1.18.1",
    "gunicorn>=23.0.0",
    # Using fork because original fxsjy/jieba is no longer maintained; this fork includes Python 3.13+ compatibility fixes
    "jieba @ git+https://github.com/GSGFs7/jieba.git@master",
    "pgvector>=0.4.1",
    "phonenumbers>=9.0.12",
    "pillow>=11.3.0",
    "psutil>=7.0.0",
    "psycopg[binary]>=3.2.12",
    "pyjwt>=2.10.1",
    "pypinyin>=0.55.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "resend>=2.19.0",
    "sentence-transformers>=5.1.2",
    "torch>=2.9.0",
    "whitenoise>=6.11.0",
]


[tool.uv.sources]
torch = { index = "pytorch" }


[[tool.uv.index]]
name = 'pypi'
url = "https://pypi.org/simple"


[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"

