[project]
name = "GSGFs-blog-backend"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blake3>=1.0.8",
    "boto3>=1.40.63",
    "boto3-stubs[s3]>=1.40.63",
    "celery-types>=0.23.0",
    "cryptography>=46.0.5",
    "django>=5.2.9",
    "django-celery-beat>=2.8.1",
    "django-debug-toolbar>=6.1.0",
    "django-ninja>=1.4.5",
    "django-prometheus>=2.4.0",
    "django-redis>=6.0.0",
    "django-two-factor-auth>=1.18.1",
    "filelock>=3.25.2",
    "flower>=2.0.1",
    "gunicorn>=23.0.0",
    # Using fork because original fxsjy/jieba is no longer maintained; this fork includes Python 3.13+ compatibility fixes
    "httpx>=0.28.1",
    "jieba @ git+https://github.com/GSGFs7/jieba.git@master",
    "pgvector>=0.4.1",
    "phonenumbers>=9.0.12",
    "pillow>=11.3.0",
    "psutil>=7.0.0",
    "psycopg[binary]>=3.3.3",
    "pypinyin>=0.55.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "resend>=2.19.0",
    "sentence-transformers>=5.1.2",
    "torch>=2.9.0",
    "uvicorn[standard]>=0.42.0",
    "whitenoise>=6.11.0",
]


[tool.uv.sources]
torch = { index = "pytorch" }


[[tool.uv.index]]
name = 'pypi'
url = "https://pypi.org/simple"


[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["I", "E", "F"]
exclude = ["api/migrations/*.py"]

[tool.ruff.format]
exclude = ["api/migrations/*.py"]
